[package]
name = "ruxios"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Ruxios is an HTTP library for Rust, inspired by Axios, with a simple yet robust interface"
keywords = ["http", "request", "client"]
repository = "https://github.com/devzolo/ruxios"
authors = ["devzolo <contact@devzolo.com>"]

[dependencies.tokio]
features = ["full"]
version = "1.33.0"

[dependencies.reqwest]
version = "0.11.22"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.serde_json]
version = "1.0.107"

[dependencies.thiserror]
version = "1.0.49"

[dependencies.anyhow]
version = "1.0.75"
